[package]
name = "runtests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.68"
colored = "2"
toml = "0.5.8"
regex = "1.10.2"
clap-v3 = "3.0.0-beta.1"
